# pro_core

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_app_health.py  test_auth_flow.py  test_commercial_workflow_routes.py  test_customer_equipment_enhancements.py  test_customer_portal_html.py  test_delete_routes.py  test_document_routes.py  test_equipment_defect_cases_and_tools.py  test_models_metadata.py  test_mvp_routes.py  test_password_reset_routes.py  test_report_routes.py  test_sector_routes.py  test_service_order_scope.py  test_settings_routes.py  test_user_routes.py
docs/: .gitkeep  operational_module_stages.md  reference_design_gap_analysis.md  testing_strategy.md
frontend/app/: __init__.py  handlers_admin.py  handlers_admin_backend_restart.py  handlers_admin_operations.py  handlers_customer_inventory.py  handlers_equipment.py  handlers_service_orders.py  main.py  main_appearance.py  main_data.py  main_data_helpers.py  main_handlers.py  main_runtime.py  main_signals.py
frontend/tests/: conftest.py  test_api_client.py  test_api_client_admin.py  test_api_client_equipment_inventory.py  test_api_client_service_orders.py  test_backend_health.py  test_backend_process_restart.py  test_backend_restart.py  test_dashboard_window.py  test_dashboard_window_access_audit.py  test_dashboard_window_admin_navigation.py  test_dashboard_window_equipment.py  test_i18n_runtime.py  (+8 more)
scripts/: create_initial_admin.py  restore_database_backup.py
(+186 files in other folders)
