[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pro-core"
version = "0.1.0"
description = "Desktop management platform for technical assistance companies."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.12.0",
    "PyJWT[crypto]>=2.10.1",
    "PySide6>=6.11.0,<6.12.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.0",
    "SQLAlchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.0.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["backend/tests", "frontend/tests"]
pythonpath = ["."]
addopts = "-ra"
